k8s/K8s_OBJ/Ingress/test-app-foo-bar/app-foo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: nginx-foo
  name: nginx-foo
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: nginx-foo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx-foo
    spec:
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: nginx-foo
        ports:
        - containerPort: 80
          name: nginx-foo-http
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
